# spaceshipv2

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  .ruff.toml  HASH_CACHE_USAGE.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  pytest_hash_cache.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_Templates/: task.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml  keep-pr-ahead.yml
.hypothesis/constants/: 00a7b8bbd06abbff  04086e5e0b13ed9c  121dcc545f6c505a  1796aff3f094152c  1ed169ca55ee0988  22ca2a45225b971d  39659ba4450a6f4b  476fdbfeb92d7d83  4949a95d501cab3e  4a4ec1cb0c9bab6f  585f38c2a9475373  5a61b7ec3e68198f  5a6d323d9ca1087f  5e3e84395452e78f  61871711ee14cdc2  6767cbdf003cb45b  684c63a7d07742e1  75688170538cfda2  80f4547ee546cfb6  82006d59dbfd9f8c  973ed1cead43c51c  aa036769dd9f1766  b38fe819b57e4c55  bf796357b41e702a  c1ca832c88f763c1  c2d8366308a12baa  c4156bdfac4ccf77  c9eb1eedca2b8bc1  cfa5ac675b017a1d  da39a3ee5e6b4b0d  e73fd455a0fad77e  f3f8c255fcb6dabf  faafda3338eaef1b
.hypothesis/tmp/: tmp08ci1bbt  tmp3icpro33  tmp3t1qbut0  tmp5ftv2bht  tmp5rrz5k7n  tmp8lzf33rv  tmpcytm0dhq  tmpia6x7x1e  tmpihi_g5ct  tmpjigpm05a  tmpnjdfu1xc  tmptakm6ap6  tmpu6zj92jx
docs/archive/: starship_simulator_studio_style_game_design_suite_v_0 (2).md
docs/modules/: M00_Starship_Simulator_Brainstorming.md  M01_Modular_Design_Index_SRS_Spec_v0.md  M02_Event_System_Spec_v0.md  M03_Geometry_Layout_Spec_v0.md  M04_Thermal_Core.txt  M05_Materials_Armor_DB_v0_3.md  M06_Ship_Sizes_Decking_v0.md  M07_Async_Snapshots_Event_Wiring_v1.md  M08_Crew_Progression_v1.md  M09_Combat_Model_v1.md  M10_Economy_Markets_v1.md  M11_Persistence_SaveLoad_v1.md  M12_UI_Architecture_Widget_Driven_Windows_v0.md  M13_Engineering_Conventions_Project_Standards_v0.md  gui_components.py  starship_simulator_modular_design_index_m_01_srs_spec_v_0.md
engine/lib/: config.py  contracts.py  result.py  rng.py  timeutil.py
engine/m01_srs/: solver.py  types.py
engine/m02_events/: __init__.py  constants.py  factories.py  models.py  queue.py  scheduling.py  subscriptions.py
engine/m11_persist/: __init__.py  json_store.py
engine/tests/: test_architectural_compliance.py  test_autosave.py  test_cli_smoke.py  test_integration_smoke.py  test_json_store.py  test_lib_contracts.py  test_lib_utils.py  test_m02_event_debugging.py  test_m02_event_model.py  test_m02_factories.py  test_m02_queue_capacity.py  test_m02_queue_core.py  test_m02_queue_edge_cases.py  test_m02_queue_initialization.py  test_m02_queue_performance.py  test_m02_queue_property_based.py  test_m02_queue_publish.py  test_m02_queue_retrieval.py  test_m02_queue_update.py  test_m02_scheduling.py  test_m02_subscriptions.py  test_rule_compliance.py  test_rule_compliance_optimized.py  test_scenarios.py  test_snapshot_publisher.py  test_srs_solver.py
engine/workers/: autosave.py  snapshots.py
tools/: demo_all.py  evt.py  run_autosave.py  run_publisher.py  run_tui.py  run_ui.py  scenario.py
(+38 files in other folders)
