[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceshipv2"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "structlog", "pytest", "pytest-qt"]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "hypothesis", "pre-commit"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C4","SIM","PL"]
fix = true
