[project]
name = "starship-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@openai.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "structlog>=25.4.0",
    "typer>=0.17.4",
    "typing-extensions>=4.15.0",
    "textual>=0.79.1",
]

[tool.black]
line-length = 100
extend-exclude = "docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.138.15",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
